package Refactor;

public enum PropertyType {

    APARTMENT,
    VILLA,
    TERRACEDHOUSE;


}
