@startuml
'https://plantuml.com/class-diagram

abstract class AbstractList
abstract AbstractCollection
interface PropertyPortfolio
interface Collection

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList

Main <|-- Property

class Property {
- double value
- double debt
- Tenant tenant
+ getValue()

}

class Main{
+ static void main(String[] args)

}

enum PropertyType {
APARTMENT
VILLA
TERRACEDHOUSE
}

@enduml